--- a/components.json
+++ b/components.json
@@ -3,7 +3,7 @@
   "rsc": true,
   "tailwind": {
     "config": "",
-    "css": "app/globals.css",
+    "css": "src/app/globals.css",
     "baseColor": "neutral",
     "cssVariables": true
   },
