--- a/package.json
+++ b/package.json
@@ -11,19 +11,41 @@
   "dependencies": {
     "@clerk/nextjs": "^6.25.4",
     "@clerk/themes": "^2.3.3",
+    "@hookform/resolvers": "^5.1.1",
+    "@langchain/community": "^0.3.49",
+    "@langchain/core": "^0.3.66",
+    "@langchain/openai": "^0.6.2",
+    "@langchain/qdrant": "^0.1.2",
+    "@qdrant/js-client-rest": "^1.15.0",
+    "@radix-ui/react-avatar": "^1.1.10",
+    "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
+    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-tooltip": "^1.2.7",
+    "@tanstack/react-table": "^8.21.3",
+    "child_process": "^1.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "inngest": "^3.40.1",
+    "ioredis": "^5.6.1",
+    "jokes": "^0.0.2",
+    "json-bigint": "^1.0.0",
     "lucide-react": "^0.525.0",
+    "mongoose": "^8.16.4",
     "next": "15.4.1",
     "next-themes": "^0.4.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-hook-form": "^7.60.0",
     "react-icons": "^5.5.0",
     "react-simple-typewriter": "^5.0.1",
-    "tailwind-merge": "^3.3.1"
+    "sonner": "^2.0.6",
+    "tailwind-merge": "^3.3.1",
+    "tls": "^0.0.1",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
